<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="28dp"/>


    <irstit.transport.Views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DriversLogin_GetPhoneText"
        android:textColor="#FFF"
        android:gravity="center"
        android:textSize="@dimen/DriversLogin_GetPhone"
        android:layout_marginBottom="10dp"/>


    <irstit.transport.Views.CustomEdittext
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DriversLogin_GetPhoneEditText"
        android:inputType="number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/DriversLogin_GetPhone"
        android:background="@drawable/dr_getphone_edittext"
        android:drawableLeft="@drawable/ic_getphone_smartphone"/>


    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/DriversLogin_GetPhoneBtn"
        android:layout_gravity="center"
        android:backgroundTint="@color/DriversLogin_Btn"
        android:layout_marginTop="10dp"
        android:id="@+id/GetPhone_Btn"/>

</LinearLayout>
