<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mdtp_white"
    tools:context=".CNG.CNG">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="مرکز معاینه فنی خودروهای سبک رحمانی" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    android:src="@drawable/k1"
                    android:scaleType="fitCenter"
                    />


                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    android:src="@drawable/k2"
                    android:scaleType="fitCenter"
                    />


                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/k3"
                    />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:background="@color/mdtp_white"
                android:lineSpacingExtra="15dp"
                android:textColor="@color/black"
                android:text=" مرکز معاینه فنی خودروهای سبک رحمانی شهر تاکستان با کد(2705) به مدیریت آقای بهرام رحمانی با 6 پرسنل و دارای آزمایشگاه هیدرواستاتیک به آدرس تاکستان انتهای خیابان صنعت هفتم برای خودروهای بنزینی و دوگانه سوز مشغول به فعالیت می باشد."
                android:layout_marginTop="5dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:text="شرایط معاینه فنی خودروها"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cng_circumatancecng"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@color/mdtp_white"
                android:lineSpacingExtra="15dp"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:text="@string/examining_docs"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/examining_docs_des"
                android:textSize="20sp"
                android:lineSpacingExtra="15dp"
                android:background="@color/mdtp_white"
                android:textColor="@color/black"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:text="@string/getting_examining_card"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gettting_examining_card_det"
                android:textSize="20sp"
                android:lineSpacingExtra="15dp"
                android:textColor="@color/black"
                android:background="@color/mdtp_white"

                />


            <TextView
                android:id="@+id/car_appereance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investigating_car_appereance"
                android:textColor="@color/black"
                android:textStyle="bold"
               />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>