<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/announcement_background_layout"
        >

        <RelativeLayout
            android:id="@+id/View1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/annoucment_image"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp">


                <TextView
                    android:id="@+id/annoucment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/newTakestan"
                    android:textColor="@color/overlay_black" />


                <TextView
                    android:id="@+id/annoucment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/annoucment_title"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="1dp"
                    android:text="@string/announcement_date"
                    android:textColor="@color/overlay_black" />

                <TextView
                    android:id="@+id/announcement_refers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/annoucment_title"
                    android:layout_marginEnd="5dp"
                    android:layout_toLeftOf="@+id/annoucment_date"
                    android:fontFamily="@font/shabnam"
                    android:text="عمومی"
                    android:textColor="@color/red_A400"
                    android:textStyle="bold" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/annoucment_image"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@drawable/slider_bk"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"/>


        </RelativeLayout>


        <TextView
            android:id="@+id/annoucment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/View1"
            android:layout_gravity="center"
            android:fontFamily="@font/shabnam"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text="@string/announcement_main_text"
            android:textColor="@color/overlay_black"
            android:textSize="10sp"
            />


        <TextView
            android:id="@+id/annoucment_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/annoucment_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/announcement_link"
            android:textColor="@color/overlay_black" />


    </RelativeLayout>

</android.support.v7.widget.CardView>




