<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_for_phone_pay"
    tools:context=".PhonePay.wallet">


    <LinearLayout
        android:id="@+id/Lin1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_wallet"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/deep_purple_A700">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/toolbar_wallet_image"
                    android:layout_width="26dp"
                    android:layout_height="26dp"

                    android:src="@drawable/paywallet" />

                <TextView
                    android:id="@+id/wallet_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/toolbar_wallet_image"
                    android:text="@string/wallet"
                    android:textColor="@color/mdtp_white"
                    android:fontFamily="@font/shabnam"

                    />


            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/wallet__balance_containerjava"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.44"
            android:background="@drawable/phone_pay_back"
            android:gravity="left"
            >
            <!--#9994cc-->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <irstit.transport.PhonePay.CircularImageView
                    android:id="@+id/walletPersonImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="28dp"
                    android:src="@drawable/slider_bk" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_toRightOf="@+id/walletPersonImage"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/amount_price"
                    android:textSize="28sp"
                    android:textColor="@color/mdtp_white"
                    />

                <TextView
                    android:id="@+id/toman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/amount"
                    android:layout_toRightOf="@+id/walletPersonImage"
                    android:text="@string/toman_balance"
                    android:fontFamily="@font/shabnam"
                    android:textSize="20sp"
                    android:textColor="@color/mdtp_white"


                    />

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="#ebebeb">

            <TextView
                android:id="@+id/transctionsjava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_of_price"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/shabnam"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/TransctionRecyclerjava"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_below="@+id/transctionsjava"
                />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        >

        <android.support.v7.widget.CardView
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="#ebebeb"
            android:padding="7dp"
            app:cardCornerRadius="28dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/plus"
                android:layout_gravity="center|end"
                android:layout_marginRight="12dp"
                />

            <TextView
                android:id="@+id/increasing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/increasing_bal"
                android:layout_gravity="center_horizontal|center"
                android:textColor="@color/mdtp_transparent_black"
                android:textSize="18sp"
                android:fontFamily="@font/shabnam"
                />

        </android.support.v7.widget.CardView>


    </RelativeLayout>




</RelativeLayout>


